format and some fix

--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -4,16 +4,16 @@
 # name: the name of the system, e.g., GIE, KuzuDb.
 # client: the client of the system, e.g., for GIE, it can be cypher, gremlin; for KuzuDB, it should be kuzu.
 # endpoint(optional): the endpoint of the system if the sytem provides a service endpoint, e.g., for GIE gremlin, it is 127.0.0.1:8182 by default.
-# dbpath(optional): the path of the database of the system if the system is a local database and need to access the database by the path, e.g., for KuzuDb, it can be /path_to_db/example_db.
-# Either of endpoint or dbpath need to be provided, depending on the access method of the system.
+# path(optional): the path of the database of the system if the system is a local database and need to access the database by the path, e.g., for KuzuDb, it can be /path_to_db/example_db.
+# Either of endpoint or path need to be provided, depending on the access method of the system.
 system.1.name = GIE
 system.1.client = cypher
 system.1.endpoint = 127.0.0.1:7687
-system.1.dbpath = 
+system.1.path = 
 system.2.name = KuzuDb
 system.2.client = kuzu
 system.2.endpoint = 
-system.2.dbpath = ./job_db
+system.2.path = ./job_db
 # common configurations for the benchmarking systems
 system.username = 
 system.password =
@@ -24,7 +24,7 @@ benchmark.thread.count=1
 # the number of warmup queries each kind of query
 benchmark.warmup.every.query=0
 # the number of queries sending by each thread
-benchmark.operation.count.every.query=1
+benchmark.operation.count.every.query=35
 # the timeout setting for each query (in milliseconds)
 benchmark.timeout=60000
 # enable print info
@@ -33,7 +33,7 @@ benchmark.print.query.result=true
 
 # The configuration for the benchmarking queries.
 # the directory of query templates
-query.dir = ./queries/cypher_queries/job
+query.dir = ./queries/cypher_queries/job/gie/
 # the directory of query parameters
 query.parameters.dir = ./data/substitution_parameters/
 # query suffix. By default, if the client is gremlin, the query suffix is .gremlin, and if the client opt is cypher, the query suffix is cypher.
