able to compile, todo: refactor the meta fetching
Committed-by: xiaolei.zl from Dev container

--- a/flex/tests/hqps/engine_config_test_cbo.yaml
+++ b/flex/tests/hqps/engine_config_test_cbo.yaml
@@ -26,6 +26,14 @@ compiler:
       - NotMatchToAntiJoinRule
       - ExtendIntersectRule
       - ExpandGetVFusionRule
+  meta:
+    reader:
+      schema:
+        uri: http://localhost:7777/v1/service/status
+        interval: 1000 # ms
+      statistics:
+        uri: http://localhost:7777/v1/graph/%s/statistics
+        interval: 86400000 # ms
   endpoint:
     default_listen_address: localhost
     bolt_connector:
