--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -43,7 +43,7 @@ jobs:
         fi
         sudo mkdir /opt/graphscope
         sudo chown -R $(id -u):$(id -g) /opt/graphscope
-        python3 -m pip install click  packaging
+        python3 -m pip install click
         python3 gsctl.py install-deps dev --v6d-version v0.22.0
 
     - name: Setup tmate session
