--- a/charts/graphscope-interactive/templates/query_proxy_nginx_conf.yaml
+++ b/charts/graphscope-interactive/templates/query_proxy_nginx_conf.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1  
 kind: ConfigMap  
 metadata:  
-  name: {{ .Release.Name }}-nginx-config  
+  name: {{ .Release.Name }}-query-proxy-nginx-config  
   namespace: {{ .Release.Namespace }}
   labels: {{- include "graphscope-interactive.labels" . | nindent 4 }}
     app.kubernetes.io/component: configmap
@@ -26,7 +26,8 @@ data:
         }
 
         server {  
-            listen 10000;  
+            {{- $queryPort := .Values.primary.service.queryPort | int }}
+            listen $queryPort;  
             server_name localhost;  
 
             location / {  
