fix CI failure when building manylinux and dev images

--- a/k8s/Makefile
+++ b/k8s/Makefile
@@ -6,8 +6,10 @@ ifeq ($(REGISTRY),)
     REGISTRY := registry.cn-hongkong.aliyuncs.com
 endif
 
-# x86_64 or aarch64
-ARCH := $(shell uname -m)
+PLATFORM          := $(shell uname -m)
+# can be: x86_64, arm64
+ARCH              := $(subst x86_64,amd64,$(subst aarch64,arm64,$(PLATFORM)))
+
 
 VERSION ?= latest
 VINEYARD_VERSION ?= v0.23.0
@@ -41,36 +43,34 @@ interactive: interactive-frontend interactive-executor
 all: coordinator analytical interactive learning
 graphscope: all
 
-dev-wheel:
-	cd $(WORKING_DIR) && \
-	cd ../python/graphscope && \
+manylinux2014:
+	cd $(WORKING_DIR)/../ && \
 	docker build \
+		-t graphscope/manylinux2014:${ARCH} \
+		-f $(DOCKERFILES_DIR)/manylinux2014.Dockerfile .
+
+dev-wheel:
+	cd $(WORKING_DIR)/../ && \
+	docker build \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg VINEYARD_VERSION=${VINEYARD_VERSION} \
 		-t graphscope/graphscope-dev:wheel-${VINEYARD_VERSION}-${ARCH} \
-		-f $(DOCKERFILES_DIR)/manylinux2014.Dockerfile .
-
-
-manylinux2014-ext:
-	cd $(WORKING_DIR) && \
-	cd ../python/graphscope  && \
-	docker build \
-		-t graphscope/manylinux2014:ext-${ARCH} \
-		-f $(DOCKERFILES_DIR)/manylinux2014-ext.Dockerfile .
+		-f $(DOCKERFILES_DIR)/graphscope-dev-wheel.Dockerfile .
 
 graphscope-dev:
-	cd $(WORKING_DIR) && \
-	cd ../python/graphscope  && \
+	cd $(WORKING_DIR)/../ && \
 	docker build \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg VINEYARD_VERSION=${VINEYARD_VERSION} \
 		-t graphscope/graphscope-dev:${VINEYARD_VERSION}-${ARCH} \
 		-f $(DOCKERFILES_DIR)/graphscope-dev.Dockerfile .
 
 vineyard-dev:
-	cd $(WORKING_DIR) && \
-	cd ../python/graphscope  && \
+	cd $(WORKING_DIR)/../ && \
 	docker build \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg VINEYARD_VERSION=${VINEYARD_VERSION} \
 		-t graphscope/vineyard-dev:${VINEYARD_VERSION}-${ARCH} \
@@ -79,6 +79,7 @@ vineyard-dev:
 vineyard-runtime:
 	cd $(WORKING_DIR) && \
 	docker build \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
 		-t graphscope/vineyard-runtime:${VINEYARD_VERSION}-${ARCH} \
@@ -88,6 +89,7 @@ coordinator:
 	cd $(WORKING_DIR)/.. && \
 	docker build \
 	    --target coordinator \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
 		--build-arg CI=${CI} \
@@ -98,6 +100,7 @@ analytical:
 	cd $(WORKING_DIR)/.. && \
 	docker build \
 	    --target analytical \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
 		--build-arg RUNTIME_VERSION=$(RUNTIME_VERSION) \
@@ -109,6 +112,7 @@ analytical-java:
 	cd $(WORKING_DIR)/.. && \
 	docker build \
 	    --target analytical-java \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
 		--build-arg RUNTIME_VERSION=$(RUNTIME_VERSION) \
@@ -120,6 +124,7 @@ interactive-frontend:
 	cd $(WORKING_DIR)/.. && \
 	docker build \
 	    --target frontend \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
 		--build-arg RUNTIME_VERSION=$(RUNTIME_VERSION) \
@@ -132,6 +137,7 @@ interactive-executor:
 	cd $(WORKING_DIR)/.. \
 	&& docker build \
 	    --target executor \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
 		--build-arg RUNTIME_VERSION=$(RUNTIME_VERSION) \
@@ -145,6 +151,7 @@ interactive-experimental:
 	cd $(WORKING_DIR)/.. && \
 	docker build \
 	    --target experimental \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
 		-t graphscope/interactive-experimental:${VERSION} \
@@ -155,6 +162,7 @@ flex-interactive:
 	cd $(WORKING_DIR)/.. && \
 	docker build \
 		--target runtime \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg ENABLE_COORDINATOR=${ENABLE_COORDINATOR} \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
@@ -166,6 +174,7 @@ learning:
 	cd $(WORKING_DIR)/.. && \
 	docker build \
 	    --target learning \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
 		--build-arg RUNTIME_VERSION=$(RUNTIME_VERSION) \
@@ -177,6 +186,7 @@ graphlearn-torch:
 	cd $(WORKING_DIR)/.. && \
 	docker build \
 	    --target graphlearn-torch \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
 		--build-arg RUNTIME_VERSION=$(RUNTIME_VERSION) \
@@ -187,6 +197,7 @@ graphlearn-torch:
 graphscope-store:
 	cd $(WORKING_DIR)/.. && \
 	docker build \
+		--build-arg ARCH=$(ARCH) \
 		--build-arg REGISTRY=$(REGISTRY) \
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
 		--build-arg profile=${PROFILE} \
