--- a/interactive_engine/benchmark/pom.xml
+++ b/interactive_engine/benchmark/pom.xml
@@ -31,6 +31,11 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/src/main/resources/kuzu_java.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.19.0</version>
+        </dependency>
     </dependencies>
 
     <build>
