--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -30,7 +30,7 @@ benchmark.timeout=60000
 # enable print info
 benchmark.print.query.name=true
 benchmark.print.query.result=true
-benchmark.result.log.path=./log/interactive-benchmark.log
+benchmark.result.log.path=./interactive-benchmark.log
 
 # The configuration for the benchmarking queries.
 # the directory of query templates
